--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,58 @@
+:root {
+    --theme-color: #99463d;
+    --text-color: #ffffff;
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+#header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: var(--theme-color);
+    color: var(--text-color);
+}
+.header-logo {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+#header-img {
+    max-width: 50px;
+}
+
+.nav-items {
+    display: flex;
+    gap: 2rem;
+}
+
+.nav-link {
+    padding: 1rem;
+    border: 1px solid var(--text-color);
+    transition: 0.3s ease-out;
+}
+
+.nav-link:hover {
+    background-color: var(--text-color);
+    color: var(--theme-color);
 }
