--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,36 @@ body {
     background-color: var(--text-color);
     color: var(--theme-color);
 }
+
+#hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+.hero-title {
+    margin: 0;
+    font-size: 2rem;
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#email {
+    margin: 1.5rem 0 0.5rem 0;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+}
+
+#submit {
+    font-size: 1.4rem;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+    color: var(--text-color);
+    background-color: var(--theme-color);
+    border: none;
+}
