--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
     --theme-color: #99463d;
     --text-color: #ffffff;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 ul {
     list-style-type: none;
 }
@@ -32,11 +34,13 @@ body {
     background-color: var(--theme-color);
     color: var(--text-color);
 }
+
 .header-logo {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
+
 #header-img {
     max-width: 50px;
 }
@@ -67,7 +71,8 @@ body {
 
 .hero-title {
     margin: 0;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    font-weight: 200;
 }
 
 #form {
@@ -88,4 +93,13 @@ body {
     color: var(--text-color);
     background-color: var(--theme-color);
     border: none;
+    transition: 0.3s ease-out;
+}
+
+#submit:hover {
+    background-color: var(--text-color);
+    color: var(--theme-color);
+    border: 1px solid var(--theme-color);
+    padding: 0.5rem;
+    cursor: pointer;
 }
